@@ -5,11 +5,13 @@ import org.apache.hadoop.fs.FileSystem;
 import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.hbase.client.Put;
 import org.apache.hadoop.hbase.io.ImmutableBytesWritable;
+import org.apache.hadoop.io.WritableComparable;
 import org.apache.hadoop.mapreduce.JobContext;
 import org.apache.hadoop.mapreduce.JobStatus;
 import org.apache.hadoop.mapreduce.OutputCommitter;
+import org.apache.hadoop.mapreduce.OutputFormat;
+import org.apache.hadoop.mapreduce.RecordWriter;
 import org.apache.hadoop.mapreduce.TaskAttemptContext;
-import org.apache.hadoop.mapreduce.lib.output.FileOutputCommitter;
 import org.apache.hadoop.mapreduce.lib.output.FileOutputFormat;
 import org.apache.hadoop.mapreduce.lib.output.SequenceFileOutputFormat;
 
@@ -20,35 +22,66 @@ import java.io.IOException;
  * are created by the MR job using HFileOutputFormat and then later "moved" into
  * the appropriate region server.
  */
-class HBaseBulkOutputFormat extends SequenceFileOutputFormat<ImmutableBytesWritable,Put> {
+class HBaseBulkOutputFormat extends OutputFormat<WritableComparable<?>,Put> {
+    private final static ImmutableBytesWritable EMPTY_LIST = new ImmutableBytesWritable(new byte[0]);
+    private SequenceFileOutputFormat<WritableComparable<?>,Put> baseOutputFormat;
+
+    public HBaseBulkOutputFormat() {
+        baseOutputFormat = new SequenceFileOutputFormat<WritableComparable<?>,Put>();
+    }
+
+    @Override
+    public void checkOutputSpecs(JobContext context) throws IOException, InterruptedException {
+        baseOutputFormat.checkOutputSpecs(context);
+    }
+
+    @Override
+    public RecordWriter<WritableComparable<?>, Put> getRecordWriter(TaskAttemptContext context) throws IOException, InterruptedException {
+        //TODO use a constant/static setter when available
+        context.getConfiguration().setClass("mapred.output.key.class",ImmutableBytesWritable.class,Object.class);
+        context.getConfiguration().setClass("mapred.output.value.class",Put.class,Object.class);
+        return new HBaseBulkRecordWriter(baseOutputFormat.getRecordWriter(context));
+    }
 
     @Override
     public OutputCommitter getOutputCommitter(TaskAttemptContext context) throws IOException {
-        return new HBaseBulkOutputCommitter(FileOutputFormat.getOutputPath(context),context,(FileOutputCommitter)super.getOutputCommitter(context));
+        return new HBaseBulkOutputCommitter(baseOutputFormat.getOutputCommitter(context));
     }
 
-    private static class HBaseBulkOutputCommitter extends FileOutputCommitter {
-        FileOutputCommitter baseOutputCommitter;
+    private static class HBaseBulkRecordWriter extends  RecordWriter<WritableComparable<?>,Put> {
+        private RecordWriter<WritableComparable<?>,Put> baseWriter;
 
-        public HBaseBulkOutputCommitter(Path outputPath, TaskAttemptContext taskAttemptContext,
-                                                           FileOutputCommitter baseOutputCommitter) throws IOException {
-            super(outputPath, taskAttemptContext);
+        public HBaseBulkRecordWriter(RecordWriter<WritableComparable<?>,Put> baseWriter)  {
+            this.baseWriter = baseWriter;
+        }
+
+        @Override
+        public void write(WritableComparable<?> key, Put value) throws IOException, InterruptedException {
+            //we ignore the key
+            baseWriter.write(EMPTY_LIST, value);
+        }
+
+        @Override
+        public void close(TaskAttemptContext context) throws IOException, InterruptedException {
+            baseWriter.close(context);
+        }
+    }
+
+    private static class HBaseBulkOutputCommitter extends OutputCommitter {
+        private OutputCommitter baseOutputCommitter;
+
+        public HBaseBulkOutputCommitter(OutputCommitter baseOutputCommitter) throws IOException {
             this.baseOutputCommitter = baseOutputCommitter;
         }
 
         @Override
-        public void abortTask(TaskAttemptContext context) {
+        public void abortTask(TaskAttemptContext context) throws IOException {
             baseOutputCommitter.abortTask(context);
         }
 
         @Override
         public void commitTask(TaskAttemptContext context) throws IOException {
             baseOutputCommitter.commitTask(context);
-        }
-
-        @Override
-        public Path getWorkPath() throws IOException {
-            return baseOutputCommitter.getWorkPath();
         }
 
         @Override
